Fixed a bug where the game title would be invisible in the mobile version

--- a/front/src/components/Gameinfo/styles.scss
+++ b/front/src/components/Gameinfo/styles.scss
@@ -15,7 +15,6 @@
     position: absolute;
     width: 80%;
     max-height: 80%;
-    aspect-ratio: 2;
     border-radius: 1rem 0 0 1rem;
     overflow: hidden;
     box-shadow: 2px 2px 10px black;
@@ -38,27 +37,32 @@
 
     @media (max-width:1024px) {
         width: 100%;
-        height: 40%;
+        min-height: 40%;
     }
 }
 
 .more-info{
     background-color: #333;
-    height: 100%;
-    width: 50%;
     overflow-y: auto;
-    padding: 1rem 2rem;
     color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 1rem;
+
 
 
     @media (max-width:1024px) {
         width: 100%;
-        height: 60%;
+        min-height: 60%;
     }
+    
+}
+
+.info__wrapper{
+    padding-inline: 1rem;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
     > p{
         font-size: 1.2rem;
         display: flex;
@@ -68,7 +72,8 @@
 
 .info__title{
     font-size: 2rem;
-    margin:auto
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .info__name{
